# billing-project-prototype

./: .gitignore  Dockerfile  Pipfile  README.MD  config.env  config_docker.env  docker-compose.yml  mypy.ini  pyproject.toml
docker/billing/: docker-entrypoint.sh
docker/development/: Dockerfile  docker.env  prod.env
nginx/conf.d/: nginx.conf
project/: conftest.py  factories.py  urls.py  wsgi.py
project/accounts/: admin.py  apps.py  data.py  managers.py  repositories.py  serializers.py  urls.py  use_cases.py  views.py  views_wrappers.py
project/accounts/migrations/: 0001_initial.py  0002_auto_20201208_0541.py
project/accounts/models/: __init__.py  user.py
project/accounts/tests/: test_registration.py  test_registration_bdd.py
project/core/: abstract_data_types.py  async_tools.py  data.py  models.py  permissions.py  repos.py  serializers.py  utils.py
project/payments/: apps.py  data.py  pagination.py  repositories.py  serializers.py  urls.py  use_cases.py  views.py  views_wrappers.py
project/payments/migrations/: 0001_initial.py  0002_auto_20201218_1730.py
project/payments/models/: __init__.py  transactions.py  wallets.py
project/payments/tests/: conftest.py  test_balance_bdd.py  test_invoices_bdd.py  test_make_deposits_bdd.py  test_make_transfer_bdd.py  test_race_condition_in_transaction.py  test_registration.py  test_transactions.py
project/settings/: __init__.py
project/settings/base/: apps.py  assets.py  cache.py  db.py  debug_toolbar.py  emails.py  env.py  for_tests.py  i18n.py  jwt.py  logging.py  project.py  rest.py  security.py  wsgi.py  (+4 more)
(+30 files in other folders)
